# zsai

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/zsai/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart
linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
linux/flutter/: cmake_install.cmake  generated_plugins.cmake
linux/intermediates_do_not_run/: zsai
linux/plugins/rust_lib_zsai/: cmake_install.cmake
linux/plugins/rust_lib_zsai/cargokit_build/tool/: .package_hash  pubspec.yaml
linux/runner/: cmake_install.cmake  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_zsai.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_zsai.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
windows_app/: CMakeLists.txt  main.cpp
